k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cql-platform
  labels:
    app.kubernetes.io/part-of: cql-platform
